mobile design edited

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "@capacitor/filesystem": "^7.1.5",
     "@capacitor/push-notifications": "^7.0.3",
+    "@capacitor/share": "^7.0.2",
+    "@capacitor/toast": "^7.0.2",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "browser-image-compression": "^2.0.2",
     "cloudinary": "^2.8.0",
