--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
-    "next": "15.5.6",
+    "next": "^16.0.7",
     "next-cloudinary": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
